// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`[object Object] > default size > caps at 4 logos when more than 4 chainIds provided 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[32px] h-[32px]"
  >
    <div
      class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[32px] h-[32px] relative [pointer-events:auto]"
      data-testid="network-pile"
    >
      <div
        class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute top-[0px] left-[0px] z-[var(--c-z)]"
        style="--c-z: 13;"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 bg-surface1 rounded-[4px] absolute"
          style="width: 16px; height: 16px;"
        />
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center bg-critical-secondary rounded-[4px]"
          style="width: 16px; height: 16px;"
        >
          <div
            class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
            data-testid="network-logo-1"
            style="--c-z: 10; width: 14px; height: 14px; border-radius: 4.2px; border-width: 0px;"
          >
            <div
              class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
              style="object-fit: contain; width: 15px; height: 15px;"
            >
              <div
                class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                style="background-image: url(mock-asset-ETHEREUM_LOGO.png);"
              />
              <img
                alt=""
                class="css-accessibilityImage-9pa8cd"
                draggable="false"
                src="mock-asset-ETHEREUM_LOGO.png"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute top-[0px] right-[0px] z-[var(--c-z)]"
        style="--c-z: 12;"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 bg-surface1 rounded-[4px] absolute"
          style="width: 16px; height: 16px;"
        />
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center bg-critical-secondary rounded-[4px]"
          style="width: 16px; height: 16px;"
        >
          <div
            class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
            data-testid="network-logo-42161"
            style="--c-z: 10; width: 14px; height: 14px; border-radius: 4.2px; border-width: 0px;"
          >
            <div
              class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
              style="object-fit: contain; width: 15px; height: 15px;"
            >
              <div
                class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                style="background-image: url(mock-asset-ARBITRUM_LOGO.png);"
              />
              <img
                alt=""
                class="css-accessibilityImage-9pa8cd"
                draggable="false"
                src="mock-asset-ARBITRUM_LOGO.png"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute bottom-[0px] left-[0px] z-[var(--c-z)]"
        style="--c-z: 11;"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 bg-surface1 rounded-[4px] absolute"
          style="width: 16px; height: 16px;"
        />
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center bg-critical-secondary rounded-[4px]"
          style="width: 16px; height: 16px;"
        >
          <div
            class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
            data-testid="network-logo-10"
            style="--c-z: 10; width: 14px; height: 14px; border-radius: 4.2px; border-width: 0px;"
          >
            <div
              class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
              style="object-fit: contain; width: 15px; height: 15px;"
            >
              <div
                class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                style="background-image: url(mock-asset-OPTIMISM_LOGO.png);"
              />
              <img
                alt=""
                class="css-accessibilityImage-9pa8cd"
                draggable="false"
                src="mock-asset-OPTIMISM_LOGO.png"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[0px] bottom-[0px] z-[var(--c-z)]"
        style="--c-z: 10;"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 bg-surface1 rounded-[4px] absolute"
          style="width: 16px; height: 16px;"
        />
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center bg-critical-secondary rounded-[4px]"
          style="width: 16px; height: 16px;"
        >
          <div
            class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
            data-testid="network-logo-8453"
            style="--c-z: 10; width: 14px; height: 14px; border-radius: 4.2px; border-width: 0px;"
          >
            <div
              class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
              style="object-fit: contain; width: 15px; height: 15px;"
            >
              <div
                class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                style="background-image: url(mock-asset-BASE_LOGO.png);"
              />
              <img
                alt=""
                class="css-accessibilityImage-9pa8cd"
                draggable="false"
                src="mock-asset-BASE_LOGO.png"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[object Object] > default size > renders double logos 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[32px] h-[32px]"
  >
    <div
      class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[32px] h-[32px] relative [pointer-events:auto]"
      data-testid="network-pile"
    >
      <div
        class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute top-[0px] left-[0px] z-[var(--c-z)]"
        style="--c-z: 10;"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 bg-surface1 rounded-[6px] absolute"
          style="width: 20px; height: 20px;"
        />
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center bg-critical-secondary rounded-[6px]"
          style="width: 20px; height: 20px;"
        >
          <div
            class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
            data-testid="network-logo-1"
            style="--c-z: 10; width: 18px; height: 18px; border-radius: 5.3999999999999995px; border-width: 0px;"
          >
            <div
              class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
              style="object-fit: contain; width: 19px; height: 19px;"
            >
              <div
                class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                style="background-image: url(mock-asset-ETHEREUM_LOGO.png);"
              />
              <img
                alt=""
                class="css-accessibilityImage-9pa8cd"
                draggable="false"
                src="mock-asset-ETHEREUM_LOGO.png"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[0px] bottom-[0px] z-[var(--c-z)]"
        style="--c-z: 11;"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 bg-surface1 rounded-[6px] absolute"
          style="width: 20px; height: 20px;"
        />
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center bg-critical-secondary rounded-[6px]"
          style="width: 20px; height: 20px;"
        >
          <div
            class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
            data-testid="network-logo-42161"
            style="--c-z: 10; width: 18px; height: 18px; border-radius: 5.3999999999999995px; border-width: 0px;"
          >
            <div
              class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
              style="object-fit: contain; width: 19px; height: 19px;"
            >
              <div
                class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                style="background-image: url(mock-asset-ARBITRUM_LOGO.png);"
              />
              <img
                alt=""
                class="css-accessibilityImage-9pa8cd"
                draggable="false"
                src="mock-asset-ARBITRUM_LOGO.png"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[object Object] > default size > renders empty when no chainIds provided 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[32px] h-[32px]"
  >
    <div
      class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[32px] h-[32px] relative [pointer-events:auto]"
      data-testid="network-pile"
    />
  </div>
</DocumentFragment>
`;

exports[`[object Object] > default size > renders quad logos 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[32px] h-[32px]"
  >
    <div
      class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[32px] h-[32px] relative [pointer-events:auto]"
      data-testid="network-pile"
    >
      <div
        class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute top-[0px] left-[0px] z-[var(--c-z)]"
        style="--c-z: 13;"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 bg-surface1 rounded-[4px] absolute"
          style="width: 16px; height: 16px;"
        />
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center bg-critical-secondary rounded-[4px]"
          style="width: 16px; height: 16px;"
        >
          <div
            class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
            data-testid="network-logo-1"
            style="--c-z: 10; width: 14px; height: 14px; border-radius: 4.2px; border-width: 0px;"
          >
            <div
              class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
              style="object-fit: contain; width: 15px; height: 15px;"
            >
              <div
                class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                style="background-image: url(mock-asset-ETHEREUM_LOGO.png);"
              />
              <img
                alt=""
                class="css-accessibilityImage-9pa8cd"
                draggable="false"
                src="mock-asset-ETHEREUM_LOGO.png"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute top-[0px] right-[0px] z-[var(--c-z)]"
        style="--c-z: 12;"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 bg-surface1 rounded-[4px] absolute"
          style="width: 16px; height: 16px;"
        />
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center bg-critical-secondary rounded-[4px]"
          style="width: 16px; height: 16px;"
        >
          <div
            class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
            data-testid="network-logo-42161"
            style="--c-z: 10; width: 14px; height: 14px; border-radius: 4.2px; border-width: 0px;"
          >
            <div
              class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
              style="object-fit: contain; width: 15px; height: 15px;"
            >
              <div
                class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                style="background-image: url(mock-asset-ARBITRUM_LOGO.png);"
              />
              <img
                alt=""
                class="css-accessibilityImage-9pa8cd"
                draggable="false"
                src="mock-asset-ARBITRUM_LOGO.png"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute bottom-[0px] left-[0px] z-[var(--c-z)]"
        style="--c-z: 11;"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 bg-surface1 rounded-[4px] absolute"
          style="width: 16px; height: 16px;"
        />
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center bg-critical-secondary rounded-[4px]"
          style="width: 16px; height: 16px;"
        >
          <div
            class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
            data-testid="network-logo-10"
            style="--c-z: 10; width: 14px; height: 14px; border-radius: 4.2px; border-width: 0px;"
          >
            <div
              class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
              style="object-fit: contain; width: 15px; height: 15px;"
            >
              <div
                class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                style="background-image: url(mock-asset-OPTIMISM_LOGO.png);"
              />
              <img
                alt=""
                class="css-accessibilityImage-9pa8cd"
                draggable="false"
                src="mock-asset-OPTIMISM_LOGO.png"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[0px] bottom-[0px] z-[var(--c-z)]"
        style="--c-z: 10;"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 bg-surface1 rounded-[4px] absolute"
          style="width: 16px; height: 16px;"
        />
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center bg-critical-secondary rounded-[4px]"
          style="width: 16px; height: 16px;"
        >
          <div
            class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
            data-testid="network-logo-8453"
            style="--c-z: 10; width: 14px; height: 14px; border-radius: 4.2px; border-width: 0px;"
          >
            <div
              class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
              style="object-fit: contain; width: 15px; height: 15px;"
            >
              <div
                class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                style="background-image: url(mock-asset-BASE_LOGO.png);"
              />
              <img
                alt=""
                class="css-accessibilityImage-9pa8cd"
                draggable="false"
                src="mock-asset-BASE_LOGO.png"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[object Object] > default size > renders single logo 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[32px] h-[32px]"
  >
    <div
      class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[32px] h-[32px] relative [pointer-events:auto]"
      data-testid="network-pile"
    >
      <div
        class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center rounded-[8px]"
        style="width: 24px; height: 24px;"
      >
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
          data-testid="network-logo-1"
          style="--c-z: 10; width: 24px; height: 24px; border-radius: 7.199999999999999px; border-width: 0px;"
        >
          <div
            class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style="object-fit: contain; width: 25px; height: 25px;"
          >
            <div
              class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
              style="background-image: url(mock-asset-ETHEREUM_LOGO.png);"
            />
            <img
              alt=""
              class="css-accessibilityImage-9pa8cd"
              draggable="false"
              src="mock-asset-ETHEREUM_LOGO.png"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[object Object] > default size > renders triple logos 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[32px] h-[32px]"
  >
    <div
      class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[32px] h-[32px] relative [pointer-events:auto]"
      data-testid="network-pile"
    >
      <div
        class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute top-[0px] left-[0px] z-[var(--c-z)]"
        style="--c-z: 10;"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 bg-surface1 rounded-[4px] absolute"
          style="width: 16px; height: 16px;"
        />
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center bg-critical-secondary rounded-[4px]"
          style="width: 16px; height: 16px;"
        >
          <div
            class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
            data-testid="network-logo-1"
            style="--c-z: 10; width: 14px; height: 14px; border-radius: 4.2px; border-width: 0px;"
          >
            <div
              class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
              style="object-fit: contain; width: 15px; height: 15px;"
            >
              <div
                class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                style="background-image: url(mock-asset-ETHEREUM_LOGO.png);"
              />
              <img
                alt=""
                class="css-accessibilityImage-9pa8cd"
                draggable="false"
                src="mock-asset-ETHEREUM_LOGO.png"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[0px] bottom-[0px] z-[var(--c-z)]"
        style="--c-z: 10;"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 bg-surface1 rounded-[4px] absolute"
          style="width: 16px; height: 16px;"
        />
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center bg-critical-secondary rounded-[4px]"
          style="width: 16px; height: 16px;"
        >
          <div
            class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
            data-testid="network-logo-10"
            style="--c-z: 10; width: 14px; height: 14px; border-radius: 4.2px; border-width: 0px;"
          >
            <div
              class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
              style="object-fit: contain; width: 15px; height: 15px;"
            >
              <div
                class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                style="background-image: url(mock-asset-OPTIMISM_LOGO.png);"
              />
              <img
                alt=""
                class="css-accessibilityImage-9pa8cd"
                draggable="false"
                src="mock-asset-OPTIMISM_LOGO.png"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute z-[var(--c-z)]"
        style="--c-z: 11;"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 bg-surface1 rounded-[4px] absolute"
          style="width: 16px; height: 16px;"
        />
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center bg-critical-secondary rounded-[4px]"
          style="width: 16px; height: 16px;"
        >
          <div
            class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
            data-testid="network-logo-42161"
            style="--c-z: 10; width: 14px; height: 14px; border-radius: 4.2px; border-width: 0px;"
          >
            <div
              class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
              style="object-fit: contain; width: 15px; height: 15px;"
            >
              <div
                class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                style="background-image: url(mock-asset-ARBITRUM_LOGO.png);"
              />
              <img
                alt=""
                class="css-accessibilityImage-9pa8cd"
                draggable="false"
                src="mock-asset-ARBITRUM_LOGO.png"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[object Object] > small size > renders double logos 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[20px] h-[20px]"
  >
    <div
      class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[20px] h-[20px] relative [pointer-events:auto]"
      data-testid="network-pile"
    >
      <div
        class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute top-[0px] left-[0px] z-[var(--c-z)]"
        style="--c-z: 10;"
      >
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center bg-surface1 rounded-[6px]"
          style="width: 13px; height: 13px;"
        >
          <div
            class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
            data-testid="network-logo-1"
            style="--c-z: 10; width: 11px; height: 11px; border-radius: 3.3px; border-width: 0px;"
          >
            <div
              class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
              style="object-fit: contain; width: 12px; height: 12px;"
            >
              <div
                class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                style="background-image: url(mock-asset-ETHEREUM_LOGO.png);"
              />
              <img
                alt=""
                class="css-accessibilityImage-9pa8cd"
                draggable="false"
                src="mock-asset-ETHEREUM_LOGO.png"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[0px] bottom-[0px] z-[var(--c-z)]"
        style="--c-z: 11;"
      >
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center bg-surface1 rounded-[6px]"
          style="width: 13px; height: 13px;"
        >
          <div
            class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
            data-testid="network-logo-42161"
            style="--c-z: 10; width: 11px; height: 11px; border-radius: 3.3px; border-width: 0px;"
          >
            <div
              class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
              style="object-fit: contain; width: 12px; height: 12px;"
            >
              <div
                class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                style="background-image: url(mock-asset-ARBITRUM_LOGO.png);"
              />
              <img
                alt=""
                class="css-accessibilityImage-9pa8cd"
                draggable="false"
                src="mock-asset-ARBITRUM_LOGO.png"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[object Object] > small size > renders quad logos 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[20px] h-[20px]"
  >
    <div
      class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[20px] h-[20px] relative [pointer-events:auto]"
      data-testid="network-pile"
    >
      <div
        class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute top-[0px] left-[0px] z-[var(--c-z)]"
        style="--c-z: 13;"
      >
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center bg-surface1 rounded-[6px]"
          style="width: 10px; height: 10px;"
        >
          <div
            class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
            data-testid="network-logo-1"
            style="--c-z: 10; width: 9px; height: 9px; border-radius: 2.6999999999999997px; border-width: 0px;"
          >
            <div
              class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
              style="object-fit: contain; width: 10px; height: 10px;"
            >
              <div
                class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                style="background-image: url(mock-asset-ETHEREUM_LOGO.png);"
              />
              <img
                alt=""
                class="css-accessibilityImage-9pa8cd"
                draggable="false"
                src="mock-asset-ETHEREUM_LOGO.png"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute top-[0px] right-[0px] z-[var(--c-z)]"
        style="--c-z: 12;"
      >
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center bg-surface1 rounded-[6px]"
          style="width: 10px; height: 10px;"
        >
          <div
            class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
            data-testid="network-logo-42161"
            style="--c-z: 10; width: 9px; height: 9px; border-radius: 2.6999999999999997px; border-width: 0px;"
          >
            <div
              class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
              style="object-fit: contain; width: 10px; height: 10px;"
            >
              <div
                class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                style="background-image: url(mock-asset-ARBITRUM_LOGO.png);"
              />
              <img
                alt=""
                class="css-accessibilityImage-9pa8cd"
                draggable="false"
                src="mock-asset-ARBITRUM_LOGO.png"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute bottom-[0px] left-[0px] z-[var(--c-z)]"
        style="--c-z: 11;"
      >
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center bg-surface1 rounded-[6px]"
          style="width: 10px; height: 10px;"
        >
          <div
            class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
            data-testid="network-logo-10"
            style="--c-z: 10; width: 9px; height: 9px; border-radius: 2.6999999999999997px; border-width: 0px;"
          >
            <div
              class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
              style="object-fit: contain; width: 10px; height: 10px;"
            >
              <div
                class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                style="background-image: url(mock-asset-OPTIMISM_LOGO.png);"
              />
              <img
                alt=""
                class="css-accessibilityImage-9pa8cd"
                draggable="false"
                src="mock-asset-OPTIMISM_LOGO.png"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[0px] bottom-[0px] z-[var(--c-z)]"
        style="--c-z: 10;"
      >
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center bg-surface1 rounded-[6px]"
          style="width: 10px; height: 10px;"
        >
          <div
            class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
            data-testid="network-logo-8453"
            style="--c-z: 10; width: 9px; height: 9px; border-radius: 2.6999999999999997px; border-width: 0px;"
          >
            <div
              class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
              style="object-fit: contain; width: 10px; height: 10px;"
            >
              <div
                class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                style="background-image: url(mock-asset-BASE_LOGO.png);"
              />
              <img
                alt=""
                class="css-accessibilityImage-9pa8cd"
                draggable="false"
                src="mock-asset-BASE_LOGO.png"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[object Object] > small size > renders single logo 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[20px] h-[20px]"
  >
    <div
      class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[20px] h-[20px] relative [pointer-events:auto]"
      data-testid="network-pile"
    >
      <div
        class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center rounded-[6px]"
        style="width: 20px; height: 20px;"
      >
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
          data-testid="network-logo-1"
          style="--c-z: 10; width: 20px; height: 20px; border-radius: 6px; border-width: 0px;"
        >
          <div
            class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style="object-fit: contain; width: 21px; height: 21px;"
          >
            <div
              class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
              style="background-image: url(mock-asset-ETHEREUM_LOGO.png);"
            />
            <img
              alt=""
              class="css-accessibilityImage-9pa8cd"
              draggable="false"
              src="mock-asset-ETHEREUM_LOGO.png"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[object Object] > small size > renders triple logos 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[20px] h-[20px]"
  >
    <div
      class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[20px] h-[20px] relative [pointer-events:auto]"
      data-testid="network-pile"
    >
      <div
        class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute top-[0px] left-[0px] z-[var(--c-z)]"
        style="--c-z: 10;"
      >
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center bg-surface1 rounded-[6px]"
          style="width: 10px; height: 10px;"
        >
          <div
            class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
            data-testid="network-logo-1"
            style="--c-z: 10; width: 9px; height: 9px; border-radius: 2.6999999999999997px; border-width: 0px;"
          >
            <div
              class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
              style="object-fit: contain; width: 10px; height: 10px;"
            >
              <div
                class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                style="background-image: url(mock-asset-ETHEREUM_LOGO.png);"
              />
              <img
                alt=""
                class="css-accessibilityImage-9pa8cd"
                draggable="false"
                src="mock-asset-ETHEREUM_LOGO.png"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[0px] bottom-[0px] z-[var(--c-z)]"
        style="--c-z: 10;"
      >
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center bg-surface1 rounded-[6px]"
          style="width: 10px; height: 10px;"
        >
          <div
            class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
            data-testid="network-logo-10"
            style="--c-z: 10; width: 9px; height: 9px; border-radius: 2.6999999999999997px; border-width: 0px;"
          >
            <div
              class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
              style="object-fit: contain; width: 10px; height: 10px;"
            >
              <div
                class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                style="background-image: url(mock-asset-OPTIMISM_LOGO.png);"
              />
              <img
                alt=""
                class="css-accessibilityImage-9pa8cd"
                draggable="false"
                src="mock-asset-OPTIMISM_LOGO.png"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute z-[var(--c-z)]"
        style="--c-z: 11;"
      >
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center bg-surface1 rounded-[6px]"
          style="width: 10px; height: 10px;"
        >
          <div
            class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
            data-testid="network-logo-42161"
            style="--c-z: 10; width: 9px; height: 9px; border-radius: 2.6999999999999997px; border-width: 0px;"
          >
            <div
              class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
              style="object-fit: contain; width: 10px; height: 10px;"
            >
              <div
                class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                style="background-image: url(mock-asset-ARBITRUM_LOGO.png);"
              />
              <img
                alt=""
                class="css-accessibilityImage-9pa8cd"
                draggable="false"
                src="mock-asset-ARBITRUM_LOGO.png"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
